--- a/page1/index.html
+++ b/page1/index.html
@@ -11,10 +11,11 @@
     <!--Owl carousel-->
     <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
-    <!-- style CSS -->
+    <!-- Magnific -->
+    <link rel="stylesheet" href="css/magnificpopup/magnific-popup.css">
+    <!-- bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
+    <!-- style -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -124,11 +125,71 @@
             </div>
         </div>
     </section>
-
+    <section id="gallery">
+        <div class="content-box">
+            <div class="content-title">
+                <h1 class="text-center">Galería</h1>
+            </div>
+            <div class="content-title-line"></div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/1.png" title="gallery item">
+                            <img src="img/gallery/1.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/2.png" title="gallery item">
+                            <img src="img/gallery/2.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/3.png" title="gallery item">
+                            <img src="img/gallery/3.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/4.png" title="gallery item">
+                            <img src="img/gallery/4.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/5.png" title="gallery item">
+                            <img src="img/gallery/5.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/6.png" title="gallery item">
+                            <img src="img/gallery/6.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/gallery/7.png" title="gallery item">
+                            <img src="img/gallery/7.png" alt="" class="img-responsive">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </section>	
     <section id="join-us">
         <div id="join-us-diagonal" class="bg-parallax"></div>
         <div class="container container-diagonal">
-            <div class="row">
+            <div class="row row-center">
                 <div class="col-md-12">
                     <div id="join-us-box">
                         <div id="join-us-box-outer">
@@ -151,6 +212,8 @@
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- Magnific JS-->
+	<script src="js/magnificpopup/jquery.magnific-popup.min.js"></script>
     <!-- custom JS -->
     <script src="js/custom.js"></script>
 </body>
