--- a/vesco/index.html
+++ b/vesco/index.html
@@ -30,58 +30,48 @@
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
 	<header>
-		<nav class="navbar navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="vesco-nav-wrapper">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#vesco-menu" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a href="#home" class="navbar-brand">
-							<img src="/img/logo.png" alt="">
-						</a>
-					</div>
-					<div class="collapse navbar-collapse" id="vesco-menu">
-						<ul class="nav navbar-nav">
-							<li>
-								<a class="smooth-scroll" href="#home">Home</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#services">Services</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#about">About</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#work">Work</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#team">Team</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#testimonials">Testimonials</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#pricing">Pricing</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#stats">Atats</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#clients">Clients</a>
-							</li>
-							<li>
-								<a class="smooth-scroll" href="#contact">Contact</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</nav>
-	</header>
+
+        <nav class="navbar navbar-fixed-top">
+
+            <div class="container-fluid">
+
+                <div class="vesco-nav-wrapper">
+
+                    <div class="navbar-header">
+
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#vesco-menu">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                       </button>
+
+                        <a class="navbar-brand" href="#home">
+                            <img src="img/logo.png" alt="logo">
+                        </a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="vesco-menu">
+                        <ul class="nav navbar-nav">
+                            <li><a class="smooth-scroll" href="#home">Home</a></li>
+                            <li><a class="smooth-scroll" href="#services">Services</a></li>
+                            <li><a class="smooth-scroll" href="#about">About</a></li>
+                            <li><a class="smooth-scroll" href="#work">Work</a></li>
+                            <li><a class="smooth-scroll" href="#team">Team</a></li>
+                            <li><a class="smooth-scroll" href="#testimonials">Testimonials</a></li>
+                            <li><a class="smooth-scroll" href="#pricing">Pricing</a></li>
+                            <li><a class="smooth-scroll" href="#stats">Stats</a></li>
+                            <li><a class="smooth-scroll" href="#clients">Clients</a></li>
+                            <li><a class="smooth-scroll" href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+        </nav>
+
+    </header>
 	<!-- Home -->
 	<section id="home">
 		<div id="home-cover" class="bg-parallax animated fadeIn">
@@ -805,7 +795,7 @@
 	<script src="js/counter/jquery.waypoints.min.js"></script>
 	<script src="js/counter/jquery.counterup.min.js"></script>
 	<!-- Jquery easing-->
-	<script src="/js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- custom JS -->
 	<script src="js/custom.js"></script>
 </body>
